# clipflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
.sisyphus/: boulder.json
.sisyphus/notepads/lib-rs-refactor/: issues.md  learnings.md
.sisyphus/plans/: frontend-modular-refactor.md  lib-rs-refactor.md
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs  window.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  operations.rs  supervisor.rs
src-tauri/src/commands/: history.rs  mod.rs  paste.rs  settings.rs  sync.rs
src-tauri/src/server/: handlers.rs  mobile.html  mobile_ui.rs  mod.rs
src/api/: history.ts  paste.ts  settings.ts  sync.ts
src/components/: DeleteModal.tsx  FilterBar.tsx  HistoryCard.tsx  HistoryList.tsx  Toast.tsx  Toolbar.tsx
src/components/views/: ChatView.tsx  HomeView.tsx  SettingsView.tsx  ViewerView.tsx
src/constants/: index.ts
src/hooks/: useClipboardController.ts  useClipboardEvents.ts  usePullRefresh.ts  useSettings.ts  useTabAnimation.ts  useToast.ts  useTranslations.ts  useViewer.ts
src/types/: index.ts
src/utils/: Icon.tsx  format.ts
