[package]
name = "clipflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "clipflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.4"
rusqlite = { version = "0.32", features = ["bundled"] }
actix-web = "4.12.1"
actix-multipart = "0.7"
local-ip-address = "0.6.9"
dirs = "5"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = "0.4"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader"
] }

tauri-plugin-global-shortcut = "2"
image = "0.24"
base64 = "0.21"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
window-vibrancy = "0.7"
enigo = "0.1.3"
notify-rust = "4"
tauri-plugin-dialog = "2"
